force-app/main/default/objects/vlocity_ins__CalculationMatrixRow__c/vlocity_ins__CalculationMatrixRow__c.object-meta.xml
<CustomObject>
    <description>Represents a row within a specific version of a Vlocity Calculation Matrix.</description>
    <label>Vlocity Calculation Matrix Row</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Data MD5 Hash</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>