force-app/main/default/objects/vlocity_ins__CalculationMatrixRow__c/fields/vlocity_ins__InputData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InputData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Input Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>