force-app/main/default/objects/vlocity_ins__CalculationMatrixRow__c/fields/vlocity_ins__OutputData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OutputData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OutputData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>