force-app/main/default/objects/vlocity_ins__CalculationMatrixRow__c/fields/vlocity_ins__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StartDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date / Time</label>
    <type>DateTime</type>
</CustomField>